2018-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCCralloc.hpp:
	  Speed and memory usage improvements for tree-decomoposition based algorithms.

2018-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-r2k.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-z80.def:
	  Fix bug #2814.

2018-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/repack_release.sh:
	  Update script for 3.8.0 release.

2018-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* doc/README.txt:
	  List TLCS-90 as supported target.
	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Minor z80 peephole improvement.

2018-09-16 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Bump version number preparing for 3.8.0 release.

2018-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  support/regression/tests/smallc.c,
	  support/regression/tests/bug-2590.c,
	  support/regression/tests/z88dk.c:
	  Disable __smallc for stm8.

2018-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	  src/SDCCmem.c,
	  src/z80/gen.c,
	  src/z80/ralloc.c:
	  Fix bug #2811.

2018-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/iso-8859-1.c:
	  Fix bug #2812.

2018-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide right shift.

2018-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc2.cc,
	  src/stm8/gen.c:
	  Improve jump on sign bit.

2018-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/structassign.c:
	  Test more struct sizes.
	* src/SDCCopt.c:
	  Narrow |.
	* src/stm8/peeph.def:
	  Minor stm8 peephole improvement.
	* src/stm8/gen.c:
	  Improve wide pointer reads and shifts.
	* src/stm8/peep.c:
	  Improve notUsed() accuracy.

2018-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/lib/_memcpy.c,
	  device/lib/stm8/memcpy.s,
	  doc/sdccman.lyx,