@@ -111,10 +111,10 @@ struct
      "'unary %c': illegal operand", 0 },
   { E_CONV_ERR, ERROR_LEVEL_ERROR,
      "conversion error: integral promotion failed", 0 },
-  { E_INT_REQD, ERROR_LEVEL_ERROR,
-     "type must be INT for bit-field definition", 0 },
+  { E_BITFLD_TYPE, ERROR_LEVEL_ERROR,
+     "invalid type for bit-field", 0 },
   { E_BITFLD_SIZE, ERROR_LEVEL_ERROR,
-     "bit-field size cannot be greater than int (%d bits)", 0 },
+     "bit-field size too wide for type (max %d bits)", 0 },
   { W_TRUNCATION, ERROR_LEVEL_WARNING,
      "high order truncation might occur", 0 },
   { E_CODE_WRITE, ERROR_LEVEL_ERROR,
